# shootemup

./: .gitignore  GameState.json  README.md  shootemup.cabal
app/: Main.hs
app/model/: Enemy.hs  GameState.hs  General.hs  Player.hs  PowerUp.hs  Shooting.hs
app/view/: View.hs
src/controller/: Controller.hs  FileSystem.hs
src/model/: Enemy.hs  GameState.hs  General.hs  Movement.hs  Parameters.hs  Player.hs  PowerUp.hs  Randomness.hs  Shooting.hs
src/view/: Animations.hs  View.hs  Window.hs
