cabal-version:      2.4
name:               shootemup
version:            0.1.0.0
author:             Bram Boogaarts, Yanna van Straten
maintainer:         bram.boogaarts@gmail.com

executable Game
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.17.2.0,
                    gloss,
                    random
  hs-source-dirs:   app
  default-language: Haskell2010
