cabal-version:      2.4
name:               shootemup
version:            0.1.0.0

author:             Bram Boogaarts, Yanna van Straten
maintainer:         bram.boogaarts@gmail.com

library
  exposed-modules:  Model.Enemy,
                    Model.GameState,
                    Model.Movement,
                    Model.Parameters,
                    Model.Player,
                    Model.Randomness,
                    Model.Shooting,
                    Model.PowerUp,
                    View.View,
                    Controller.Controller,
                    Controller.FileSystem

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base >=4.7 && <5
                  , random
                  , gloss
                  , containers
                  , aeson
                  , directory
                  
  hs-source-dirs:   src
  default-language: Haskell2010

executable shootemup
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base >=4.7 && <5
                  , shootemup
                  , gloss

  hs-source-dirs:   app
  default-language: Haskell2010
